# rl-examples

./: .gitignore  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  pyproject.toml
models/: pololu.xml
rl_examples/: action_repeat.py  mjx_gym_env.py  mjx_task.py  utils.py
rl_examples/tasks/: diff_drive_nav.py
runs/diff_drive_nav_ppo_ar10/: vecnormalize.pkl
runs/diff_drive_nav_ppo_ar20/: vecnormalize.pkl
runs/diff_drive_nav_ppo_ar5/: vecnormalize.pkl
scripts/: bench_rollout.py  eval_policy.py  eval_policy_rollout_and_save.py  render_rollout_tracking_video.py  train_diff_drive_ppo.py
traj/: rl_poses.csv
